# rrctrl

./: Cargo.toml  README.md  build.rs
bindings/: Cargo.toml  build.rs
config/: Cargo.toml
config/src/: lib.rs
crates/rrctrl/: Cargo.toml  build.rs
crates/rrctrl-config/: Cargo.toml
crates/rrctrl-config/src/: lib.rs
crates/rrctrl-settings/: Cargo.toml  build.rs
crates/rrctrl-settings/src/: config.rs  display.rs  main.rs
crates/rrctrl-settings/src/display/: config.rs  info.rs  mod.rs  refresh.rs
crates/rrctrl-settings/ui/: applications.slint  appwindow.slint  backend.slint  display.slint  settings-window.slint
crates/rrctrl/src/: display.rs  main.rs  process.rs  state.rs  wstring.rs
src/: config.rs  display.rs  error.rs  hotreload.rs  main.rs  process.rs  state.rs  tray.rs
