[package]
name = "rrctrl"
version = "0.5.1"
edition = "2021"
description = "Refresh-Rate Control"
repository = "https://github.com/AmionSky/rrctrl"
readme = "README.md"
license = "GPL-3.0-only"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tray-indicator = "0.2.4"
hotreload = "0.1.0"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

[build-dependencies]
tauri-winres = "0.1.1"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
