[workspace]
resolver = "2"
members = [
    "crates/rrctrl",
    "crates/rrctrl-config",
#   "crates/rrctrl-settings",
]
default-members = ["crates/rrctrl"]

[workspace.package]
license = "GPL-3.0-only"
repository = "https://github.com/AmionSky/rrctrl"

[workspace.dependencies]
rrctrl-config.path = "crates/rrctrl-config"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
