[package]
name = "rrctrl"
version = "0.8.0"
edition = "2024"
description = "Refresh Rate Control"
repository = "https://github.com/AmionSky/rrctrl"
license = "GPL-3.0-only"
publish = false

[dependencies]
rrctrl-config.path = "./config"
tray-indicator = { version = "0.4.0", features = ["dpiaware"] }
hotreload = "0.3.0"

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

[build-dependencies]
winscribe = "0.1.0"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
