[package]
name = "rrctrl-settings"
version = "0.1.0"
edition = "2021"
description = "Refresh Rate Control - Settings"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
]