[package]
name = "rrctrl-settings"
version = "0.1.0"
edition = "2021"
description = "Refresh Rate Control - Settings"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rrctrl-config.workspace = true
toml = "0.8.8"

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
]

[dependencies.slint]
version = "1.7.1"
default-features = false
features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "renderer-software",
    "accessibility",
    "compat-1-2",
]

[build-dependencies]
slint-build = "1.7.1"