[package]
name = "rrctrl"
version = "0.6.1"
edition = "2021"
description = "Refresh Rate Control"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rrctrl-config.workspace = true
tray-indicator = { version = "0.3.0", features = ["dpiaware"] }
hotreload = "0.1.0"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]

[build-dependencies]
tauri-winres = "0.1.1"